Save gc log in benchmark
Change-Id: I516c3695df5bdd3efc603c32899d695cb7aa120a